force-app/main/default/objects/WindowsPerHouse__c/WindowsPerHouse__c.object-meta.xml
<CustomObject>
    <description>How many windows a house has and their dimensions.</description>
    <label>WindowsPerHouse</label>
    <nameField>
        <label>WindowsPerHouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WindowsPerHouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>