force-app/main/default/objects/WindowsPerHouse__c/fields/calculated_sqft__c.field-meta.xml
<CustomField>
    <fullName>calculated_sqft__c</fullName>
    <label>calculated sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>